<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_wallet"
        android:title="@string/accounts" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transaction"
        android:title="@string/title_list_transactions" />
</menu>
