...
            app:elevation="0dp"
            app:fabSize="auto"
            app:rippleColor="#FDFDFD"
            app:srcCompat="@drawable/ic_transaction" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_activity_add_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
...
